# re-skills

./: README.md
minimal-executable-builder/: SKILL.md
minimal-executable-builder/agents/: format-scout.md  size-golfer.md
minimal-executable-builder/assets/sample-prompts/: tiny-requests.txt
minimal-executable-builder/references/: decision-tree.md  validation-matrix.md
minimal-executable-builder/scripts/: hex_roundtrip.py  measure_binary.py
skillpacks/minimal-executables/: README.md
skillpacks/minimal-executables/tiny-elf-linux/: SKILL.md
skillpacks/windows-api-monitoring/: README.md
skillpacks/windows-api-monitoring/apimon-frida-mcp/: .gitignore  README.md  fastmcp.json  pyproject.toml  requirements-frida-tools.txt  server.py
skillpacks/windows-api-monitoring/apimon-frida-mcp/api-monitor-xml/: SOURCE.md
skillpacks/windows-api-monitoring/apimon-frida-mcp/src/apimon_frida_mcp/: __init__.py  config.py  decoding.py  definitions.py  formatting.py  hooks.py  mcp_utils.py  models.py  tracer.py
skillpacks/windows-api-monitoring/apimon-frida-mcp/tests/: test_config.py  test_decoding.py  test_definitions.py  test_hooks.py  test_server_inmemory.py  test_tracer.py
tiny-elf-linux/assets/elf32-template/: build.sh
tiny-elf-linux/references/: loader-caveats.md  syscall-abi.md
tiny-macho-macos/: SKILL.md
tiny-macho-macos/assets/arm64-template/: build_dynamic.sh  exit_dynamic.s
tiny-macho-macos/references/: macho-notes.md
tiny-pe-windows/: SKILL.md
tiny-pe-windows/assets/pe32-template/: notes.txt
tiny-pe-windows/scripts/: emit_tiny_pe.py
(+11 files in other folders)
