[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apimon-frida-mcp"
version = "0.1.0"
description = "FastMCP server that traces Windows APIs with Frida and decodes calls with API Monitor XML definitions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.0",
    "frida>=17.0.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/apimon_frida_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
